Update to Thrift 0.11.0
We need a newer Thrift to support hosts with openssl 1.1. Since Jaeger its
self requires a c++11 compiler and nlohmann-json requires at least g++ 4.9,
supporting newer dependencies makes sense. But Thrift 0.9.2 didn't support
openssl 1.1.

This is some pretty brutal surgery:

- Remove crossdock and zipkin support entirely. The IDL is broken for C++ /
  Thrift generates bad code for it. See
  https://github.com/jaegertracing/jaeger-idl/issues/35,
  https://issues.apache.org/jira/browse/THRIFT-4484
  https://github.com/jaegertracing/cpp-client/issues/45

- Adapt Thrift's namespace-aliasing approach to support Thrift built with
  use of std::smart_ptr or boost::smart_ptr; Thrift switched to std::smart_ptr
  in later versions but retains boost::smart_ptr for BC.

- Regenerate IDL with Thrift 0.11.0 and commit in-tree.

Unsure if Hunter still works; may need to package Thrift 0.11.0

Haven't tested with a Thrift configured with Boost smart pointers. Don't do
that.

The wholesale removal of zipkin and crossdock support means this is unlikely to
be committable to mainline. Hopefully Thrift will fix their codegen. If not,
well, we're probably going to throw Thrift out entirely soon.

--- a/src/jaegertracing/Constants.h.in
+++ b/src/jaegertracing/Constants.h.in
@@ -40,4 +40,6 @@ static constexpr auto kSamplerTypeLowerBound = "lowerbound";
 
 }  // namespace jaegertracing
 
+#include "jaegertracing/jaeger_smartptr.h"
+
 #endif  // JAEGERTRACING_CONSTANTS_H
