Add additional testing coverage.
Signed-off-by: Ryan Burn <ryan.burn@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,6 +262,7 @@ if(BUILD_TESTING)
       src/jaegertracing/TraceIDTest.cpp
       src/jaegertracing/TracerTest.cpp
       src/jaegertracing/TracerFactoryTest.cpp
+      src/jaegertracing/DynamicLoadTest.cpp
       src/jaegertracing/UDPTransportTest.cpp
       src/jaegertracing/baggage/BaggageTest.cpp
       src/jaegertracing/metrics/MetricsTest.cpp
@@ -289,10 +290,10 @@ if(BUILD_TESTING)
       UnitTest testutils GTest::main jaegertracing-static ${LIBS})
   add_test(NAME UnitTest COMMAND UnitTest)
 
-  add_executable(DynamicLoadTest src/jaegertracing/DynamicLoadTest.cpp)
+  add_executable(DynamicallyLoadTracerTest src/jaegertracing/DynamicallyLoadTracerTest.cpp)
   target_link_libraries(
-    DynamicLoadTest OpenTracing::opentracing-static)
-  add_test(NAME DynamicLoadTest COMMAND DynamicLoadTest 
+    DynamicallyLoadTracerTest OpenTracing::opentracing-static)
+  add_test(NAME DynamicallyLoadTracerTest COMMAND DynamicallyLoadTracerTest 
            ${CMAKE_BINARY_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}jaegertracing${CMAKE_SHARED_LIBRARY_SUFFIX})
   if(JAEGERTRACING_COVERAGE)
       setup_target_for_coverage(NAME UnitTestCoverage
