--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
         - *1
         - g++-4.9
     env:
-    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+    - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && CMAKE_OPTIONS='-DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=ON -DJAEGERTRACING_COVERAGE=ON'"
   - os: linux
     addons:
       apt:
@@ -26,7 +26,7 @@ matrix:
         - *1
         - g++-5
     env:
-    - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+    - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CMAKE_OPTIONS='-DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=ON -DJAEGERTRACING_COVERAGE=ON'"
   - os: linux
     addons:
       apt:
@@ -36,7 +36,7 @@ matrix:
         - *1
         - g++-6
     env:
-    - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+    - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6 && CMAKE_OPTIONS='-DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=ON -DJAEGERTRACING_COVERAGE=ON'"
   - os: linux
     addons:
       apt:
@@ -46,60 +46,27 @@ matrix:
         - *1
         - g++-7
     env:
-    - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+    - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7 && CMAKE_OPTIONS='-DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=ON -DJAEGERTRACING_COVERAGE=ON'"
   - os: linux
     addons:
       apt:
         sources:
         - ubuntu-toolchain-r-test
-        - llvm-toolchain-precise-3.6
         packages:
         - *1
-        - clang-3.6
+        - g++-7
     env:
-    - MATRIX_EVAL="CC=clang-3.6 && CXX=clang++-3.6"
+    - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7 && CMAKE_OPTIONS='-DCMAKE_BUILD_TYPE=Release -DJAEGERTRACING_PLUGIN=ON -DBUILD_TESTING=ON -DHUNTER_CONFIGURATION_TYPES=Release'"
   - os: linux
     addons:
       apt:
         sources:
-        - ubuntu-toolchain-r-test
-        - llvm-toolchain-precise-3.7
+        - llvm-toolchain-trusty-6.0
         packages:
         - *1
-        - clang-3.7
+        - clang-6.0
     env:
-    - MATRIX_EVAL="CC=clang-3.7 && CXX=clang++-3.7"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        - llvm-toolchain-precise-3.8
-        packages:
-        - *1
-        - clang-3.8
-    env:
-    - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - llvm-toolchain-trusty-4.0
-        packages:
-        - *1
-        - clang-4.0
-    env:
-    - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - llvm-toolchain-trusty-5.0
-        packages:
-        - *1
-        - clang-5.0
-    env:
-    - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+    - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && CMAKE_OPTIONS='-DCMAKE_BUILD_TYPE=Debug -DBUILD_SHARED_LIBS=ON -DJAEGERTRACING_COVERAGE=ON'"
 branches:
   only:
   - master
