--- a/.travis.yml
+++ b/.travis.yml
@@ -78,9 +78,9 @@ before_install:
     bash cmake-3.10.0-rc5-Linux-x86_64.sh --skip-license &&
     cd ..
 script:
-  - ./scripts/build.sh
+  - eval "${MATRIX_EVAL}" && ./scripts/build.sh
 after_success:
-  - ./scripts/upload-coverage.sh
+  - eval "${MATRIX_EVAL}" && ./scripts/upload-coverage.sh
 cache:
   directories:
     - "$HOME/.hunter/_Base/Cache"
