--- a/.travis.yml
+++ b/.travis.yml
@@ -78,9 +78,9 @@ before_install:
     bash cmake-3.10.0-rc5-Linux-x86_64.sh --skip-license &&
     cd ..
 script:
-  - bash -cx "eval \"${MATRIX_EVAL}\" && ./scripts/upload-coverage.sh"
+  - CMAKE_OPTIONS="${CMAKE_OPTIONS}" ./scripts/upload-coverage.sh
 after_success:
-  - bash -cx "eval \"${MATRIX_EVAL}\" && ./scripts/upload-coverage.sh"
+  - CMAKE_OPTIONS="${CMAKE_OPTIONS}" ./scripts/upload-coverage.sh"
 cache:
   directories:
     - "$HOME/.hunter/_Base/Cache"
