--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,7 @@ before_install:
     bash cmake-3.10.0-rc5-Linux-x86_64.sh --skip-license &&
     cd ..
 script:
-  - CMAKE_OPTIONS="${CMAKE_OPTIONS}" ./scripts/upload-coverage.sh
+  - CMAKE_OPTIONS="${CMAKE_OPTIONS}" ./scripts/build.sh
 after_success:
   - CMAKE_OPTIONS="${CMAKE_OPTIONS}" ./scripts/upload-coverage.sh
 cache:
