Add more compilers to Travis (#96)
* Add more compilers to Travis

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Override CMake options directly in Travis

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Add script to upload coverage, build crossdock test

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Fix Travis tokens

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Add crossdock to build

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Try reevaluating matrix env

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Run bash with -x

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Use -x in script

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Try using env to pass variables

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Fix command syntax

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Correct build step

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Fixes for static builds and crossdock

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Fix crossdock build

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Remove crossdock build from Travis matrix for now

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Add Travis plugin deployment

Signed-off-by: Isaac Hier <isaachier@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,7 +250,6 @@ if(BUILD_TESTING)
 
   add_executable(UnitTest
       src/jaegertracing/ConfigTest.cpp
-      src/jaegertracing/DynamicLoadTest.cpp
       src/jaegertracing/ReferenceTest.cpp
       src/jaegertracing/SpanContextTest.cpp
       src/jaegertracing/SpanTest.cpp
@@ -284,7 +283,9 @@ if(BUILD_TESTING)
   add_test(NAME UnitTest COMMAND UnitTest)
 
   if(TARGET jaegertracing)
-    add_executable(DynamicallyLoadTracerTest src/jaegertracing/DynamicallyLoadTracerTest.cpp)
+    add_executable(DynamicallyLoadTracerTest
+      src/jaegertracing/DynamicLoadTest.cpp
+      src/jaegertracing/DynamicallyLoadTracerTest.cpp)
     target_include_directories(DynamicallyLoadTracerTest PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>)
     target_link_libraries(
@@ -306,9 +307,9 @@ if(JAEGERTRACING_BUILD_CROSSDOCK)
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/crossdock>)
   target_link_libraries(crossdock PUBLIC ${JAEGERTRACING_LIB})
 
-  set(JAEGER_CROSSDOCK_URL
-"https://raw.githubusercontent.com/jaegertracing/jaeger/master/docker-compose/\
-jaeger-docker-compose.yml")
+  string(CONCAT JAEGER_CROSSDOCK_URL
+         "https://raw.githubusercontent.com/"
+         "jaegertracing/jaeger/master/docker-compose/jaeger-docker-compose.yml")
   file(DOWNLOAD ${JAEGER_CROSSDOCK_URL}
        "${CMAKE_CURRENT_SOURCE_DIR}/crossdock/jaeger-docker-compose.yml")
   find_program(DOCKER_COMPOSE_EXE docker-compose REQUIRED)
@@ -316,17 +317,17 @@ jaeger-docker-compose.yml")
       -f ${CMAKE_CURRENT_SOURCE_DIR}/crossdock/docker-compose.yml
       -f ${CMAKE_CURRENT_SOURCE_DIR}/crossdock/jaeger-docker-compose.yml)
   add_custom_target(crossdock-kill
-    COMMAND ${DOCKER_COMPOSE_CMD} kill
-    COMMAND ${DOCKER_COMPOSE_CMD} rm --force)
+    COMMAND ${DOCKER_COMPOSE_CMD} down)
   add_custom_target(crossdock-run
     COMMAND ${DOCKER_COMPOSE_CMD} build
     COMMAND ${DOCKER_COMPOSE_CMD} run crossdock
-    DEPENDS crossdock-kill)
+    DEPENDS crossdock-kill
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
   add_custom_target(crossdock-fresh
-    COMMAND ${DOCKER_COMPOSE_CMD} pull
-    COMMAND ${DOCKER_COMPOSE_CMD} build
+    COMMAND ${DOCKER_COMPOSE_CMD} build --pull --no-cache
     COMMAND ${DOCKER_COMPOSE_CMD} run crossdock
-    DEPENDS crossdock-kill)
+    DEPENDS crossdock-kill
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
   add_custom_target(crossdock-logs
     COMMAND ${DOCKER_COMPOSE_CMD} logs)
 endif()
