Update Hunter to get newest OpenTracing C++ v1.4.0 (#97)
* Update Hunter to get newest OpenTracing C++ v1.4.0

Signed-off-by: Isaac Hier <isaachier@gmail.com>

* Fix DynamicallyLoadTracerTest linking

Signed-off-by: Isaac Hier <isaachier@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ set(HUNTER_CONFIGURATION_TYPES "Release;Debug" CACHE STRING
 include(CMakeDependentOption)
 include(HunterGate)
 HunterGate(
-    URL "https://github.com/ruslo/hunter/archive/v0.20.62.tar.gz"
-    SHA1 "10ffae63cf7b07193d6d7b459c1d0cfa242fad5b"
+    URL "https://github.com/ruslo/hunter/archive/v0.20.70.tar.gz"
+    SHA1 "95fb7d11f0828746e2983b5f06ff7981a676da3f"
 )
 
 project(jaegertracing VERSION 0.4.0)
@@ -289,7 +289,7 @@ if(BUILD_TESTING)
     target_include_directories(DynamicallyLoadTracerTest PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>)
     target_link_libraries(
-      DynamicallyLoadTracerTest OpenTracing::opentracing-static)
+      DynamicallyLoadTracerTest OpenTracing::opentracing-static GTest::main)
     add_test(NAME DynamicallyLoadTracerTest
              COMMAND DynamicallyLoadTracerTest $<TARGET_FILE:jaegertracing>)
     if(JAEGERTRACING_COVERAGE)
