Fix dynamic load test
Signed-off-by: Isaac Hier <ihier@uber.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,8 +248,12 @@ if(BUILD_TESTING)
       src/jaegertracing/testutils/TracerUtil.cpp)
   target_link_libraries(testutils PUBLIC ${JAEGERTRACING_LIB})
 
+  if(BUILD_SHARED_LIBS)
+    set(dynamic_load_test_src src/jaegertracing/DynamicLoadTest.cpp)
+  endif()
   add_executable(UnitTest
       src/jaegertracing/ConfigTest.cpp
+      ${dynamic_load_test_src}
       src/jaegertracing/ReferenceTest.cpp
       src/jaegertracing/SpanContextTest.cpp
       src/jaegertracing/SpanTest.cpp
@@ -284,9 +288,9 @@ if(BUILD_TESTING)
 
   if(TARGET jaegertracing)
     add_executable(DynamicallyLoadTracerTest
-      src/jaegertracing/DynamicLoadTest.cpp
       src/jaegertracing/DynamicallyLoadTracerTest.cpp)
     target_include_directories(DynamicallyLoadTracerTest PUBLIC
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
       $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/src>)
     target_link_libraries(
       DynamicallyLoadTracerTest OpenTracing::opentracing-static GTest::main)
